--- a/style.css
+++ b/style.css
@@ -18,6 +18,9 @@ header {
 }
 main {
    display: flex;
-   justify-content: center;
+   justify-content: space-evenly;
    align-items: center;
+}
+.mainList .listItems {
+   margin-top: 20px;
 }
